--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>App de Lena</title>
 </head>
 <body>
-    <p> <a href="html/login.html">cliquez ici</a>.</p>
+    <p> <a href="html/login.html"></a></p>
 </body>
 </html>
