--- a/html/juego.html
+++ b/html/juego.html
@@ -64,6 +64,7 @@
   <script src="../games/puzzlemagique.js"></script>
   <script src="../games/repartis.js"></script>
   <script src="../games/dictee.js"></script>
+  <script src="../js/avatarData.js"></script>
   <script src="../js/storage.js"></script>
   <script src="../js/juego.js"></script>
 </body>
