--- a/html/menu.html
+++ b/html/menu.html
@@ -29,6 +29,7 @@
         <p class="motivational-quote">“¡Un paso más cerca de tu meta!”</p>
     </div>
 
+    <script src="../js/avatarData.js"></script>
     <script src="../js/storage.js"></script>
     <script src="../js/menu.js"></script>
 </body>
