--- a/html/logros.html
+++ b/html/logros.html
@@ -28,6 +28,7 @@
         <h1 class="question-prompt">🏆 Mes Succès 🏆</h1>
         <button id="back-to-game" class="btn">⬅️ Retour au jeu</button>
     </div>
+    <script src="../js/avatarData.js"></script>
     <script src="../js/storage.js"></script>
     <script src="../js/logros.js"></script>
 </body>
