--- a/html/login.html
+++ b/html/login.html
@@ -14,43 +14,18 @@
     <div id="login-container">
         <h1 class="question-prompt">Qui es-tu ?</h1>
         <p class="login-steps">1. Choisis ton avatar  · 2. Écris ton nom  · 3. Choisis ta couleur </p>
+        
+       
         <div id="avatar-selection">
-            <button class="avatar-option" type="button" data-avatar-id="licorne" data-avatar-name="Licorne" data-avatar-icon="../assets/avatars/licorne.svg">
-                <img src="../assets/avatars/licorne.svg" alt="Avatar Licorne" loading="lazy">
-                <span class="avatar-label">Licorne</span>
-            </button>
-            <button class="avatar-option" type="button" data-avatar-id="lion" data-avatar-name="Lion" data-avatar-icon="../assets/avatars/lion.svg">
-                <img src="../assets/avatars/lion.svg" alt="Avatar Lion" loading="lazy">
-                <span class="avatar-label">Lion</span>
-            </button>
-            <button class="avatar-option" type="button" data-avatar-id="pingouin" data-avatar-name="Pingouin" data-avatar-icon="../assets/avatars/pingouin.svg">
-                <img src="../assets/avatars/pingouin.svg" alt="Avatar Pingouin" loading="lazy">
-                <span class="avatar-label">Pingouin</span>
-            </button>
-            <button class="avatar-option" type="button" data-avatar-id="panda" data-avatar-name="Panda" data-avatar-icon="../assets/avatars/panda.svg">
-                <img src="../assets/avatars/panda.svg" alt="Avatar Panda" loading="lazy">
-                <span class="avatar-label">Panda</span>
-            </button>
-            <button class="avatar-option" type="button" data-avatar-id="renard" data-avatar-name="Renard" data-avatar-icon="../assets/avatars/renard.svg">
-                <img src="../assets/avatars/renard.svg" alt="Avatar Renard" loading="lazy">
-                <span class="avatar-label">Renard</span>
-            </button>
-            <button class="avatar-option" type="button" data-avatar-id="grenouille" data-avatar-name="Grenouille" data-avatar-icon="../assets/avatars/grenouille.svg">
-                <img src="../assets/avatars/grenouille.svg" alt="Avatar Grenouille" loading="lazy">
-                <span class="avatar-label">Grenouille</span>
-            </button>
-            <button class="avatar-option" type="button" data-avatar-id="hibou" data-avatar-name="Hibou" data-avatar-icon="../assets/avatars/hibou.svg">
-                <img src="../assets/avatars/hibou.svg" alt="Avatar Hibou" loading="lazy">
-                <span class="avatar-label">Hibou</span>
-            </button>
-            <button class="avatar-option" type="button" data-avatar-id="dauphin" data-avatar-name="Dauphin" data-avatar-icon="../assets/avatars/dauphin.svg">
-                <img src="../assets/avatars/dauphin.svg" alt="Avatar Dauphin" loading="lazy">
-                <span class="avatar-label">Dauphin</span>
-            </button>
-            <button class="avatar-option" type="button" data-avatar-id="dragon" data-avatar-name="Dragon" data-avatar-icon="../assets/avatars/dragon.svg">
-                <img src="../assets/avatars/dragon.svg" alt="Avatar Dragon" loading="lazy">
-                <span class="avatar-label">Dragon</span>
-            </button>
+            <div class="avatar-option" data-avatar="🦄" title="Licorne">🦄</div>
+            <div class="avatar-option" data-avatar="🦁" title="Lion">🦁</div>
+            <div class="avatar-option" data-avatar="🐧" title="Pingouin">🐧</div>
+            <div class="avatar-option" data-avatar="🐼" title="Panda">🐼</div>
+            <div class="avatar-option" data-avatar="🦊" title="Renard">🦊</div>
+            <div class="avatar-option" data-avatar="🐸" title="Grenouille">🐸</div>
+            <div class="avatar-option" data-avatar="🦉" title="Hibou">🦉</div>
+            <div class="avatar-option" data-avatar="🐬" title="Dauphin">🐬</div>
+            <div class="avatar-option" data-avatar="🐉" title="Dragon">🐉</div>
         </div>
         <div class="name-input-wrapper">
             <span class="name-icon" aria-hidden="true"></span>
