--- a/html/menu.html
+++ b/html/menu.html
@@ -12,6 +12,17 @@
         <header class="menu-header">
             <div id="user-greeting">¡Hola, aventurera!</div>
             <div id="user-avatar"></div>
+            <button id="change-avatar-btn" class="btn-secondary">Cambiar Avatar</button>
+
+            <div id="avatar-selection-modal" class="modal">
+                <div class="modal-content">
+                    <span class="close-button">&times;</span>
+                    <h2>Selecciona tu Avatar</h2>
+                    <div id="avatar-options-container">
+                        <!-- Avatars will be loaded here by JavaScript -->
+                    </div>
+                </div>
+            </div>
         </header>
 
         <main class="menu-options">
