jugando con css

--- a/html/juego.html
+++ b/html/juego.html
@@ -39,6 +39,7 @@
 
   <audio id="audioCorrect" src="https://assets.mixkit.co/sfx/download/mixkit-game-bling-2041.wav"></audio>
   <audio id="audioWrong" src="https://assets.mixkit.co/sfx/download/mixkit-wrong-answer-2051.wav"></audio>
+  <audio id="audioCoins" src="https://assets.mixkit.co/sfx/download/mixkit-collect-coin-1938.wav"></audio>
 
   <div id="shopModal" class="shop-modal" aria-hidden="true">
     <div class="shop-modal__dialog" role="dialog" aria-modal="true" aria-labelledby="shopModalTitle">
@@ -64,6 +65,9 @@
   <script src="../games/puzzlemagique.js"></script>
   <script src="../games/repartis.js"></script>
   <script src="../games/dictee.js"></script>
+  <script src="../games/mathblitz.js"></script>
+  <script src="../games/lecturemagique.js"></script>
+  <script src="../games/raisonnement.js"></script>
   <script src="../js/avatarData.js"></script>
   <script src="../js/storage.js"></script>
   <script src="../js/juego.js"></script>
